Implement at a glance endpoint. Fix problem where fetch_at_date was causing persistent re-fetches by going back to the last available daythat was a market day - don't pick sundays
